--- a/Widget/views/message.phtml
+++ b/Widget/views/message.phtml
@@ -7,7 +7,7 @@
         <div id="messageBarWrap">
             <div id="messageBar" class="center">
                 <? foreach ($this->widget->links as $link): ?>
-                <a id="<?= $link['title']; ?>-24" class="Tips button" href="<?= $link['url']; ?>" title="<?= ucfirst($link['title']); ?>" rel="<?= $link['rel']; ?>">
+                <a id="<?= $link['title']; ?>-24" class="tips button" href="<?= $link['url']; ?>" title="<?= ucfirst($link['title']); ?>" rel="<?= $link['rel']; ?>">
                     <span><?= ucfirst($link['title']); ?></span>
                 </a>
                 <? endforeach; ?>
