--- a/Widget/views/widget.phtml
+++ b/Widget/views/widget.phtml
@@ -1,8 +1,8 @@
-<div class="moduletable">
+<div class="widget">
     <?php if ($this->widget->showTitle): ?>
     <h3><span><?= $this->widget->name; ?></span></h3>
     <?php endif; ?>
-    <div class="moduletable<?= $this->params['moduleclass_sfx']; ?>">
+    <div class="widget<?= $this->params['moduleclass_sfx']; ?>">
         <?= $this->html; ?>
     </div>
 </div>
