widget menu updates

--- a/Widget/views/widget.phtml
+++ b/Widget/views/widget.phtml
@@ -2,7 +2,7 @@
     <?php if ($this->widget->showTitle): ?>
     <h3><span><?= $this->widget->name; ?></span></h3>
     <?php endif; ?>
-    <div class="widget<?= $this->params['moduleclass_sfx']; ?>">
+    <div class="widget<?= $this->params['widgetclass_sfx']; ?>">
         <?= $this->html; ?>
     </div>
 </div>
