--- a/Widget/views/widget.phtml
+++ b/Widget/views/widget.phtml
@@ -1,8 +1,8 @@
-<div id="<?= $this->params['widget_id']; ?>" class="<?= $this->params['widget_class']; ?>">
+<div id="<?= $this->widget->params['widget_id']; ?>" class="<?= $this->widget->params['widget_class']; ?>">
     <?php if ($this->widget->showTitle): ?>
     <h2><?= $this->widget->name; ?></h2>
     <?php endif; ?>
     <div id="<?= $this->params['widget_id_inner']; ?>" class="<?= $this->params['widget_class_inner']; ?>">
-        <?= $this->html; ?>
+        <?= $this->widget->html; ?>
     </div>
 </div>
