--- a/Widget/views/widget.phtml
+++ b/Widget/views/widget.phtml
@@ -1,8 +1,15 @@
-<div id="<?= $this->widget->params['widget_id']; ?>" class="<?= $this->widget->params['widget_class']; ?>">
+<?php
+$widgetId = ($this->widget->params['widget_id']) ? ' id="' . $this->widget->params['widget_id'] . '"' : null;
+$widgetClass = ($this->widget->params['widget_class']) ? ' class="' . $this->widget->params['widget_class'] . '"' : null;
+$widgetIdInner = ($this->widget->params['widget_id_inner']) ? ' id="' . $this->widget->params['widget_id_inner'] . '"' : null;
+$widgetClassInner = ($this->widget->params['widget_class_inner']) ? ' class="' . $this->widget->params['widget_class_inner'] . '"' : null;
+?>
+
+<div<?= $widgetId; ?><?= $widgetClass; ?>>
     <?php if ($this->widget->showTitle): ?>
     <h2><?= $this->widget->name; ?></h2>
     <?php endif; ?>
-    <div id="<?= $this->params['widget_id_inner']; ?>" class="<?= $this->params['widget_class_inner']; ?>">
+    <div<?= $widgetIdInner; ?><?= $widgetClassInner; ?>>
         <?= $this->widget->html; ?>
     </div>
 </div>
